CHIBOX-1 test fix